--- a/src/components/pages/roadmap-page/roadmap.style.scss
+++ b/src/components/pages/roadmap-page/roadmap.style.scss
@@ -95,7 +95,7 @@ $btn-txt-clr: #F2F4FE;
                 }
             }
             &.live{
-                border-bottom: 4px solid $blue-clr;
+                border-bottom: 4px solid $blue-light-clr;
                 p{
                     color: $navy-blue-light30-clr;
                 }
