--- a/src/components/pages/new-feedback/new-feedback.style.scss
+++ b/src/components/pages/new-feedback/new-feedback.style.scss
@@ -45,6 +45,10 @@ $dropdown-transition:all 0.5s ease-in-out;
         padding: 20px 25px;
         position: relative;
 
+        .error-msg{
+            color: red;
+        }
+
         &-icon{
             position: absolute;
             top: -20px;
@@ -64,6 +68,12 @@ $dropdown-transition:all 0.5s ease-in-out;
 
         &-input{
             margin-bottom: 1.5rem;
+
+            &.error{                
+                .feedback-title{
+                    border: solid 1px #ff0000;
+                }                
+            }
 
             .title{
                 font-size: 13px;
@@ -88,12 +98,16 @@ $dropdown-transition:all 0.5s ease-in-out;
             textarea{
                 height: 120px;
 
-                &:hover{
+                &:hover, &:active{
                     border: 1px solid $blue-clr;
                 }
             }
             input{
                 height: 48px;
+                outline: none;
+                &:hover, &:active{
+                    border: 1px solid $blue-clr;
+                }
             }
 
             &.category{
@@ -108,6 +122,12 @@ $dropdown-transition:all 0.5s ease-in-out;
                     font-size: 13px;
                     color: $navy-blue-light30-clr;
                     cursor: pointer;
+                    &:hover, &:active{
+                        border: 1px solid $blue-clr;
+                    }
+                    &.error{                       
+                        border: solid 1px #ff0000;                        
+                    }
                 }
                 
                 .category-dropdown{  
@@ -154,6 +174,12 @@ $dropdown-transition:all 0.5s ease-in-out;
                 }
             }
 
+            &.error{
+                textarea{
+                    border: solid 1px #ff0000;
+                }
+            }
+
 
         }
 
@@ -179,6 +205,8 @@ $dropdown-transition:all 0.5s ease-in-out;
             }
             .add-btn{
                 background: $pink-clr;
+                border: none;
+                font-family: 'Jost', sans-serif;
 
                 &:hover{
                     background: $btn-hover-clr;
